--- a/src/css/style.css
+++ b/src/css/style.css
@@ -29,3 +29,36 @@ input[type="radio"].visually-hidden {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+.container {
+  width: 650px;
+}
+
+/* HEADER */
+
+.header-main {
+  background: url(../img/header.png) center;
+  background-size: cover;
+  width: 750px;
+  margin: 0 auto;
+}
+
+.header-menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 850px;
+}
+
+.header-menu-item {
+  display: block;
+  text-decoration: none;
+  font-size: 17px;
+  font-family: "Dosis", sans-serif;
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  line-height: 3.487;
+  text-align: center;
+}
