--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,25 @@
+@font-face {
+  font-family: 'Dosis';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Dosis Regular'), local('Dosis-Regular'),
+    url('../fonts/dosis-v7-latin-regular.woff2') format('woff2'),
+    url('../fonts/dosis-v7-latin-regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/open-sans-v15-latin-700.eot');
+  src: local('Open Sans Bold'), local('OpenSans-Bold'),
+    url('../fonts/open-sans-v15-latin-700.woff2') format('woff2'),
+    url('../fonts/open-sans-v15-latin-700.woff') format('woff');
+}
+
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-family: 'Dosis', sans-serif;
 }
 
 *,
@@ -56,7 +75,6 @@ input[type='radio'].visually-hidden {
   display: block;
   text-decoration: none;
   font-size: 17px;
-  font-family: "Dosis", sans-serif;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
   line-height: 3.487;
