--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,8 +50,9 @@ input[type='radio'].visually-hidden {
 }
 
 .container {
-  width: 650px;
+  width: 750px;
   margin: 0 auto;
+  padding: 0 50px;
 }
 
 /* HEADER */
@@ -131,6 +132,7 @@ input[type='radio'].visually-hidden {
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 6px;
+  margin-bottom: 55px;
 }
 
 .title-h2::before {
@@ -256,4 +258,28 @@ input[type='radio'].visually-hidden {
   border-color: rgb(99, 99, 99);
   border-style: solid;
   opacity: 0.439;
+}
+
+/* LATTER COMPOSITIONS */
+
+/* .title-h2::before {
+  width: 100%;
+} */
+
+.latter-compositions-about {
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.latter-compositions-item {
+  background-color: #f5f6f6;
+  padding-top: 35px;
+}
+
+.latter-compositions-item:not(:last-child) {
+  margin-bottom: 50px;
+}
+
+.latter-compositions-release {
+  width: 600px;
 }
