--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,11 @@ html {
 *::after {
   box-sizing: inherit;
 }
+.svg{
+  background-color: #779da6;
+  width: 50px;
+  height: 20px;
+}
 
 img {
   display: block;
