--- a/src/css/style.css
+++ b/src/css/style.css
@@ -310,6 +310,10 @@ input[type='radio'].visually-hidden {
   opacity: 0.439;
 }
 
+.buy-online span {
+  padding-right: 20px;
+}
+
 /* LATTER COMPOSITIONS */
 
 /* .title-h2::before {
@@ -362,7 +366,7 @@ input[type='radio'].visually-hidden {
   font-size: 15px;
   text-transform: uppercase;
   padding-top: 7px;
-  padding-bottom: 38px;
+  padding-bottom: 40px;
 }
 
 .latter-compositions-album::before {
@@ -381,40 +385,51 @@ input[type='radio'].visually-hidden {
 
 .latter-compositions-songs-text {
   color: rgb(122, 128, 131);
-  padding-bottom: 32px;
+  padding-bottom: 54px;
 }
 
 .latter-compositions-button {
-  display: block;
   width: 196px;
-  padding: 15px 30px;
+  padding: 12px 22px;
   text-align: left;
   color: rgb(0, 0, 2);
-  font-weight: bold;
   line-height: 1.618;
   border-width: 1px;
   border-color: rgb(98, 98, 98);
   border-style: solid;
   opacity: 0.439;
+  text-transform: none;
 }
 
 .latter-button-icons {
   display: flex;
-  flex-basis: 480px;
   justify-content: space-between;
 }
 
-.latter-compositions-icons {
+.button-icon {
+  fill: rgb(0, 0, 2);
+  width: 10px;
+  height: 10px;
+}
+
+.latter-compositions-list {
   display: flex;
-  flex-basis: 250px;
+  flex-basis: 55%;
   justify-content: space-between;
   align-items: flex-end;
   padding-right: 26px;
-  font-size: 12px;
+  font-size: 13px;
   font-family: 'Myriad Pro';
   color: rgb(151, 152, 152);
   line-height: 1.2;
   position: relative;
+}
+
+.icon {
+  width: 13px;
+  height: 13px;
+  fill: rgba(151, 152, 152, 0.8);
+  margin-right: 5px;
 }
 
 /*-- LEAD SINGER --*/
@@ -439,6 +454,29 @@ input[type='radio'].visually-hidden {
   text-align: center;
 }
 
+.slider-icons {
+  position: absolute;
+  top: 16%;
+  left: 44%;
+  fill: #ffffff;
+}
+
+.slider-icons-left {
+  width: 26px;
+  margin-right: 15px;
+  transform: rotate(20deg);
+}
+
+.slider-icons-music {
+  width: 32px;
+}
+
+.slider-icons-right {
+  width: 26px;
+  margin-left: 20px;
+  transform: rotate(45deg);
+}
+
 .lead-singer-about {
   font-size: 17px;
   font-family: 'Myriad Pro';
@@ -461,6 +499,36 @@ input[type='radio'].visually-hidden {
   line-height: 1.734;
   padding-bottom: 170px;
 }
+
+/*.slider-icons-bottom {
+  position: absolute;
+  top: 86%;
+  left: 50%;
+  border-color: rgb(255, 255, 255);
+  border-style: solid;
+  border-radius: 50%;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider-icons-bottom .circle {
+  border-width: 1px;
+  width: 9px;
+  height: 9px;
+}
+
+.slider-icons-bottom .circle2 {
+  width: 9px;
+  height: 9px;
+  background-color: rgb(255, 255, 255);
+}
+
+.slider-icons-bottom .circle3 {
+  width: 9px;
+  height: 9px;
+  background-color: rgb(255, 255, 255);
+}*/
 
 .lead-singer-songs {
   position: relative;
@@ -663,22 +731,22 @@ input[type='radio'].visually-hidden {
 
 /*FORM*/
 
-.contact-section{
+.contact-section {
   width: 574px;
   margin: 0 auto;
   padding-top: 210px;
   padding-bottom: 5px;
 }
 
-.contact-head{
+.contact-head {
   margin-bottom: 32px;
   width: 500px;
 }
 
-.contact-title{
+.contact-title {
   margin-bottom: 36px;
   font-size: 50.49px;
-  font-family: "Dosis";
+  font-family: 'Dosis';
   color: rgb(67, 67, 67);
   text-transform: uppercase;
   line-height: 1.174;
@@ -697,27 +765,27 @@ input[type='radio'].visually-hidden {
   background-color: black;
 }
 
-.contact-text{
+.contact-text {
   font-size: 14px;
-  font-family: "OpenSans";
+  font-family: 'OpenSans';
   color: rgb(121, 130, 133);
   line-height: 3.571;
   text-align: left;
 }
 
-.contact-tel{
+.contact-tel {
   font-size: 14px;
-  font-family: "OpenSans";
+  font-family: 'OpenSans';
   color: rgb(121, 130, 133);
   line-height: 3.571;
 }
 
-.contact-us-form{
+.contact-us-form {
   width: 384px;
   position: relative;
 }
 
-.contact-us-form:after{
+.contact-us-form:after {
   content: '';
   width: 0px;
   height: 190px;
@@ -749,7 +817,7 @@ input:focus {
 
 label {
    font-size: 14px;
-   font-family: "OpenSans";
+   font-family: 'OpenSans';
    color: rgb(121, 130, 133);
    line-height: 1.734;
   position: absolute;
@@ -762,10 +830,11 @@ label {
 }
 
 /* active state */
-input:focus ~ label, input:valid ~ label {
+input:focus ~ label,
+input:valid ~ label {
   top: -15px;
   font-size: 14px;
-  color: #5264AE;
+  color: #5264ae;
 }
 
 /* BOTTOM BARS ================================= */
@@ -775,13 +844,14 @@ input:focus ~ label, input:valid ~ label {
   width: 380px;
 }
 
-.bar:before, .bar:after {
-  content: "";
+.bar:before,
+.bar:after {
+  content: '';
   height: 2px;
   width: 0;
   bottom: 0;
   position: absolute;
-  background: #5264AE;
+  background: #5264ae;
   transition: 0.2s ease all;
   -moz-transition: 0.2s ease all;
   -webkit-transition: 0.2s ease all;
@@ -804,7 +874,7 @@ input:focus ~ .bar:after {
 button {
   display: block;
   font-size: 20px;
-  font-family: "OpenSans";
+  font-family: 'OpenSans';
   font-weight: bold;
   text-transform: uppercase;
   line-height: 1.214;
@@ -812,12 +882,11 @@ button {
   border: 0;
   outline: none;
   background-color: none;
-} 
+}
 
 button:hover,
 button:focus {
   background: rgba(204, 169, 169, 0.2);
   cursor: pointer;
   color: #2a8127;
-}  
-
+}
